# forgetless

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
benches/: context_benchmark.rs  core.rs  files.rs  vision.rs
docs/: next.config.ts  package-lock.json
docs/src/app/: globals.css  layout.tsx  page.tsx
examples/: basic_usage.rs  test_output.rs  verify_outputs.rs
scripts/: test_api.sh
src/: builder.rs  error.rs  lib.rs
src/agent/: mod.rs
src/ai/: embeddings.rs  llm.rs  mod.rs  vision.rs
src/chunking/: mod.rs
src/context/: mod.rs
src/core/: config.rs  error.rs  mod.rs  types.rs
src/embedding/: mod.rs
src/input/: content.rs  file.rs  mod.rs
src/memory/: mod.rs
src/processing/: mod.rs  scoring.rs  token.rs
src/processing/chunking/: chunker.rs  config.rs  mod.rs  types.rs
src/scoring/: mod.rs
src/token/: mod.rs
tests/: server_test.rs
